--- a/Views/Creador/Index.cshtml
+++ b/Views/Creador/Index.cshtml
@@ -6,7 +6,6 @@
 @if (Model != null)
 {
     <body id="cuerpo">
-
         <div style="width: 100%; height: 600px; overflow: hidden;">
             <img src="@Url.Action("File", "Home", new { id = Model.Creador.ImageBackground })"
                  alt="Responsive image"
@@ -30,7 +29,6 @@
         </div>
 
         <div id="mebresias" class="row container-fluid text-center">
-
             @if (Model.EsPropietario)
             {
                 <div class="pt-3 d-flex justify-content-center">
@@ -95,18 +93,14 @@
                             {
                                 <div id="contenido" class="col-md-12 offset-md-12">
                                     <div style="background-color:#1A1E23" class="product-card mb-5">
-                                        @if (Publicacion.Adjuntos != null)
+                                        @if (Publicacion.Adjuntos != null && Publicacion.Adjuntos.Count > 0)
                                         {
-                                            @foreach (var adjunto in Publicacion.Adjuntos)
-                                            {
-                                                <img src="@Url.Action("File", "Home", new { id = adjunto })" class="img-fluid rounded imagen-publicacion" alt="Producto">
-                                            }
+                                            <img src="@Url.Action("File", "Home", new { id = Publicacion.Adjuntos[0] })" class="img-fluid rounded imagen-publicacion" alt="Producto">
                                         }
                                         <h2>@Publicacion.Titulo</h2>
                                         <p>@Publicacion.Contenido</p>
                                         <p>
-                                            <a href="@Url.Action("Index", "Publicacion", new { id = Publicacion.Id })"
-                                               class="btn btn-primary">Ver Publicacion</a>
+                                            <a href="@Url.Action("Index", "Publicacion", new { id = Publicacion.Id })" class="btn btn-primary">Ver Publicacion</a>
                                         </p>
                                     </div>
                                 </div>
@@ -127,7 +121,6 @@
                     </div>
                     <div class="modal-body">
                         <form id="modifyDataForm" asp-controller="Creador" asp-action="EditarCreador" method="post" enctype="multipart/form-data">
-
                             <div class="mb-3">
                                 <label for="nombrePagina" class="form-label">Nombre de la Página</label>
                                 <textarea type="text" class="form-control" id="nombrePagina" name="nombrePagina" required>@Model.Creador.nombrePagina</textarea>
@@ -144,15 +137,17 @@
                                 <label for="nuevaImagen" class="form-label">Subir Imagen</label>
                                 <input type="file" class="form-control" id="nuevaImagen" name="nuevaImagen">
                             </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                <button type="submit" form="modifyDataForm" class="btn btn-primary">Guardar Cambios</button>
+                            </div>
                         </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                        <button type="submit" form="modifyDataForm" class="btn btn-primary">Guardar Cambios</button>
                     </div>
                 </div>
             </div>
         </div>
+
+
 
 
         <div id="membershipModal" class="modal fade" tabindex="-1" aria-labelledby="membershipModalLabel" aria-hidden="true">
